force-app/main/default/objects/Branding_Audit__c/Branding_Audit__c.object-meta.xml
<CustomObject>
    <label>Branding Audit</label>
    <nameField>
        <displayFormat>BIA-{00000}</displayFormat>
        <label>Branding Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branding Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>