force-app/main/default/objects/Branding_Audit__c/fields/Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Date__c</fullName>
    <label>Audit Date</label>
    <type>DateTime</type>
</CustomField>