force-app/main/default/objects/Branding_Audit__c/fields/Missing_Count__c.field-meta.xml
<CustomField>
    <fullName>Missing_Count__c</fullName>
    <label>Missing Count</label>
    <summaryFilterItems>
        <field>Branding_Audit_Line__c.Condition__c</field>
        <operation>equals</operation>
        <value>Missing</value>
    </summaryFilterItems>
    <summaryForeignKey>Branding_Audit_Line__c.Branding_Audit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>