force-app/main/default/objects/Branding_Audit__c/fields/Retailer_Account__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Branding Audits</relationshipLabel>
    <relationshipName>Branding_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>